--- a/pom.xml
+++ b/pom.xml
@@ -29,10 +29,19 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <source>1.5</source>
-                    <target>1.5</target>
+                    <source>1.6</source>
+                    <target>1.6</target>
                 </configuration>
             </plugin>
+            <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+               <forkMode>once</forkMode>
+               <argLine>-XX:-FailOverToOldVerifier -Xverify:all</argLine>
+            </configuration>
+            </plugin>
         </plugins>
+
     </build>
 </project>
