--- a/pom.xml
+++ b/pom.xml
@@ -2,13 +2,20 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>org.jboss.classwriter</groupId>
-    <artifactId>classwriter</artifactId>
+    <groupId>org.jboss.classfilewriter</groupId>
+    <artifactId>classfilewriter</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
-    <name>classwriter</name>
-    <url>http://maven.apache.org</url>
+    <name>classfilewriter</name>
+    <url>https://github.com/jbossas/jboss-classfilewriter</url>
+
+    <developers>
+        <developer>
+            <name>Stuart Douglas</name>
+            <email>sdouglas@redhat.com</email>
+        </developer>
+    </developers>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -42,6 +49,5 @@
             </configuration>
             </plugin>
         </plugins>
-
     </build>
 </project>
