--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-        	<version>4.8.2</version>
+            <version>4.8.2</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -41,13 +41,27 @@
                 </configuration>
             </plugin>
             <plugin>
-            <groupId>org.apache.maven.plugins</groupId>
-            <artifactId>maven-surefire-plugin</artifactId>
-            <configuration>
-               <forkMode>once</forkMode>
-               <argLine>-XX:-FailOverToOldVerifier -Xverify:all</argLine>
-            </configuration>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <configuration>
+                    <forkMode>once</forkMode>
+                    <argLine>-XX:-FailOverToOldVerifier -Xverify:all</argLine>
+                </configuration>
             </plugin>
         </plugins>
     </build>
+
+    <scm>
+        <connection>scm:git:git://github.com/jbossas/jboss-classfilewriter.git</connection>
+        <developerConnection>scm:git:git://github.com/jbossas/jboss-classfilewriter.git</developerConnection>
+        <url>scm:git:git://github.com/jbossas/jboss-classfilewriter.git</url>
+    </scm>
+
+    <distributionManagement>
+        <repository>
+            <id>repository.jboss.org</id>
+            <name>JBoss Maven2 Repository</name>
+            <url>http://repository.jboss.org/maven2</url>
+        </repository>
+    </distributionManagement>
 </project>
