--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,12 @@
     xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.jboss</groupId>
+        <artifactId>jboss-parent</artifactId>
+        <version>6-beta-1</version>
+    </parent>
+
     <groupId>org.jboss.classfilewriter</groupId>
     <artifactId>classfilewriter</artifactId>
     <version>1.0.0-SNAPSHOT</version>
@@ -56,18 +62,5 @@
         <developerConnection>scm:git:git@github.com:jbossas/jboss-classfilewriter.git</developerConnection>
         <url>scm:git:git://github.com/jbossas/jboss-classfilewriter.git</url>
     </scm>
-
-    <distributionManagement>
-        <repository>
-            <id>jboss-releases-repository</id>
-            <name>JBoss Releases Repository</name>
-            <url>https://repository.jboss.org/nexus/service/local/staging/deploy/maven2</url>
-        </repository>
-        <snapshotRepository>
-            <id>jboss-snapshots-repository</id>
-            <name>JBoss Snapshots Repository</name>
-            <url>https://repository.jboss.org/nexus/content/repositories/snapshots</url>
-        </snapshotRepository>
-    </distributionManagement>
 
 </project>
