--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,10 @@
     </parent>
 
     <groupId>org.jboss.classfilewriter</groupId>
-    <artifactId>classfilewriter</artifactId>
+    <artifactId>jboss-classfilewriter</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
+    <description>A bytecode writer that creates .class files at runtime</description>
 
     <name>classfilewriter</name>
     <url>https://github.com/jbossas/jboss-classfilewriter</url>
