[Fixes #36] Fix Require-Capability OSGi manifest header
Signed-off-by: Grzegorz Grzybek <gr.grzybek@gmail.com>

--- a/pom.xml
+++ b/pom.xml
@@ -62,7 +62,7 @@
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
-                <version>3.3.0</version>
+                <version>5.1.8</version>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
@@ -71,6 +71,10 @@
                         <Export-Package>
                             org.jboss.classfilewriter.*;version=${project.version}
                         </Export-Package>
+                        <Import-Package>
+                            !java.*,
+                            *
+                        </Import-Package>
                     </instructions>
                 </configuration>
                 <executions>
