[ISSUE-48] Definining automatic module name is org.jboss.classfilewriter

--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>
+                        <Automatic-Module-Name>org.jboss.classfilewriter</Automatic-Module-Name>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Bundle-Version>${project.version}</Bundle-Version>
                         <Export-Package>
